Fix main page ui text wrap

--- a/src/app/css/Widgets.css
+++ b/src/app/css/Widgets.css
@@ -29,8 +29,8 @@
     font-size: 0.8rem;
     font-weight: bold;
     color: #7c8793;
-    max-width: 100px;
-    text-wrap: nowrap;
+    max-width: 100ch;
+    text-wrap: 300px;
     text-overflow: fade;
 }
 
@@ -44,6 +44,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
 .data-element {
